# vcworld

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  download_data.sh  pyproject.toml  run_pipeline.sh
.github/workflows/: test.yml
docs/: data.md  pipeline.md  troubleshooting.md
scripts/: entropy_scan.py  tahoe_to_h5ad.py
src/cli_pipeline/: agent_workflow.py  cli.py  schemas.py
src/cli_pipeline/stages/: infer.py  infer_api.py  prepare.py  prompt.py  retrieve.py
src/cli_pipeline/stages/single_case/: __init__.py  prompt.py
src/cli_pipeline/tools/: __init__.py  data_tools.py  knowledge_tools.py  validation_tools.py
src/cli_pipeline/utils/: __init__.py  common.py  logging.py  parsing.py  template.py
support/: DE_template.py  DIR_template.py
tests/: test_parsing.py  test_validation.py
